@@ -1,0 +1,32 @@
+Title: if.include: Added missing interface types
+Level: 1
+Component: checks
+Class: fix
+Compatible: compat
+Edition: cre
+State: unknown
+Version: 1.2.8p24
+Date: 1498051266
+
+Added following interface types:
+
+231: "macSecControlledIF",
+232: "macSecUncontrolledIF",
+233: "aviciOpticalEther",
+234: "atmbond",
+235: "voiceFGDOS",
+236: "mocaVersion1",
+237: "ieee80216WMAN",
+238: "adsl2plus",
+239: "dvbRcsMacLayer",
+240: "dvbTdm",
+241: "dvbRcsTdma",
+242: "x86Laps",
+243: "wwanPP",
+244: "wwanPP2",
+245: "voiceEBS",
+245: "ifPwType",
+258: "vmwareVirtualNic"
+
+which are now available in the ruleset
+{{Network Interface and Switch Port Discovery}}.
