@@ -22,6 +22,7 @@
     * 4784 FIX: oracle_rman: wrong detection of level 1 backup...
     * 4785 FIX: oracle_locks: New SQL for check...
     * 4868 FIX: oracle_tablespace: Restrict data for check from primary...
+    * 4871 FIX: if.include: Added missing interface types...
 
     Multisite:
     * 4053 FIX: Fixed moving summary line in BI availability when sorting
